# agentflow

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  plan-v2.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
data/knowledge/notes/: incident-response.txt  product-launch-checklist.txt
data/knowledge/policies/: expense-policy.md  remote-work.md
data/sample/: agentflow-overview.md  rag-notes.md
data/support-kb/: account-settings.md  data-export.md  login-troubleshooting.md  refund-policy.md
data/tenants/support-saas/: billing-faq.md  escalation-guide.md  integrations.md  known-issues.md
docs/: ARCHITECTURE.md  RAG.md
eval/: tasks-knowledge.yaml  tasks-supervisor.yaml  tasks-support-kb.yaml  tasks.yaml
mcp/: README.md
scripts/: docker_entrypoint.sh  live_smoke.sh  mcp_smoke.sh
src/agentflow/: __init__.py  config.py
src/agentflow/api/: __init__.py  main.py
src/agentflow/eval/: __init__.py  metrics.py  runner.py
src/agentflow/graph/: __init__.py  builder.py  nodes.py  state.py  supervisor.py  tracing.py
src/agentflow/mcp/: __init__.py  __main__.py  server.py
src/agentflow/rag/: __init__.py  __main__.py  ingest.py  loaders.py  retriever.py
src/agentflow/tools/: __init__.py  calculator.py  knowledge.py  search.py
tests/: test_api_support.py  test_core.py  test_rag.py  test_supervisor.py
web/: package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: AppShell.tsx  Chat.tsx  CitationChips.tsx  Composer.tsx  MessageBubble.tsx  MobileInfoSheet.tsx  Sidebar.tsx  (+3 more)
(+2 files in other folders)
