[project]
name = "agentflow"
version = "0.1.0"
description = "LangGraph agent runtime with tools and regression eval harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "langchain>=0.3.21",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "uvicorn[standard]>=0.32.0",
    "chromadb>=1.5.9",
    "mcp[cli]>=1.0.0",
    "langgraph-checkpoint>=2.0.0",
    "pypdf>=6.13.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
agentflow-eval = "agentflow.eval.runner:main"
agentflow-api = "agentflow.api.main:run_server"
agentflow-ingest = "agentflow.rag.ingest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentflow"]

[tool.ruff]
line-length = 100
target-version = "py311"
